--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!doctype html>
 <html>
 <head>
+  <style>
+     a:link {color: black; text-decoration: none;}
+     a:visited {color: black; text-decoration: none;}
+     a:active {color: black; text-decoration: none;}
+     a:hover {color: #FA7BA5; text-decoration: none;}
+  </style>
   <title>WELCOME</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>WEB</h2>
-  <p>월드 와이드 웹(World Wide Web, WWW, W3)은 인터넷에 연결된 컴퓨터를 통해 사람들이 정보를 공유할 수 있는 전 세계적인 정보 공간을 말한다. 간단히 웹(Web)이라 부르는 경우가 많다. 이 용어는 인터넷과 동의어로 쓰이는 경우가 많으나 엄격히 말해 서로 다른 개념이다. 웹은 전자 메일과 같이 인터넷 상에서 동작하는 하나의 서비스일 뿐이다. 그러나 1993년 이래로 웹은 인터넷 구조의 절대적 위치를 차지하고 있다.</p>
+ <h1><a href="index.html"><p align="center">𝗝𝗔𝗞𝗦𝗜𝗠 𝟯𝟭</p></a></h1>
+ <p style="word-spacing:200px" align="center">
+  <a href="index1.html">𝗕𝗢𝗢𝗞</a>
+  <a href="index2.html">𝗖𝗢𝗡𝗧𝗘𝗡𝗦</a>
+  <a href="index3.html">𝗣𝗟𝗔𝗖𝗘</a>
+ </p>
+ <br><br><p align="center">𝗟𝗼𝗼𝗸𝗶𝗻𝗴 𝗳𝗼𝗿 𝘀𝗼𝗺𝗲𝘁𝗵𝗶𝗻𝗴 𝘀𝗽𝗲𝗰𝗶𝗮𝗹, 𝗺𝗲 𝗮𝗻𝗱 𝗺𝘆 𝗞𝗨 𝗳𝗿𝗲𝗶𝗻𝗱𝘀 𝗺𝗮𝗱𝗲 𝘁𝗵𝗶𝘀 𝘀𝗶𝘁𝗲 𝘁𝗼 𝗮𝗿𝗰𝗵𝗶𝘃𝗲 𝘄𝗵𝗮𝘁 𝘄𝗲 𝗵𝗮𝘃𝗲 𝗿𝗲𝗮𝗱</p>
+    <p align="center">❤𝙒𝙚 𝙡𝙤𝙫𝙚 𝙩𝙝𝙚 𝙨𝙢𝙚𝙡𝙡 𝙤𝙛 𝙩𝙝𝙚 𝙗𝙤𝙤𝙠𝙨<br>❤𝙒𝙚 𝙡𝙤𝙫𝙚 𝙩𝙝𝙚 𝙛𝙡𝙤𝙬 𝙤𝙛 𝙩𝙝𝙚 𝙘𝙤𝙣𝙫𝙚𝙧𝙨𝙖𝙩𝙞𝙤𝙣<br>❤𝙒𝙚 𝙡𝙤𝙫𝙚 𝙚𝙫𝙚𝙧𝙮𝙩𝙝𝙞𝙣𝙜 𝙮𝙤𝙪 𝙬𝙞𝙡𝙡 𝙨𝙝𝙖𝙧𝙚 𝙛𝙤𝙧 𝙪𝙨</p>
+    <p align="center">𝗦𝗼, 𝗱𝗼𝗻'𝘁 𝗵𝗲𝘀𝗶𝘁𝗮𝘁𝗲 𝘁𝗼 𝗰𝗹𝗶𝗰𝗸 𝗵𝗲𝗿𝗲! 𝗪𝗲 𝗮𝗿𝗲 𝗮𝗹𝘄𝗮𝘆𝘀 𝗵𝗮𝗽𝗽𝘆 𝘁𝗼 𝗺𝗲𝗲𝘁 𝘆𝗼𝘂 𝗴𝘂𝘆𝘀</p>
+    <br><br><p align="center">𝗘𝗩𝗘𝗥𝗬𝗗𝗔𝗬 𝗕𝗢𝗢𝗞 𝗟𝗜𝗙𝗘! 𝗟𝗢𝗩𝗘 𝗬𝗔!</p>
+ <br><br><p align="center">  <img src="김동인.jpeg" width=30%> <img src="생각조종자.jpeg" width=30%> <img src="윤동주.jpeg" width=30%></p>
 </body>
 </html>
